--- a/app/views/course/gcses-pending-or-equivalency-tests.html
+++ b/app/views/course/gcses-pending-or-equivalency-tests.html
@@ -27,7 +27,7 @@
           value: "must",
           text: "Must have the GCSE, or equivalent (least flexible)",
           hint: {
-            text: "Candidates who do not already have a GCSE grace C (4) or above, or above will be discouraged from applying, but not blocked."
+            text: "Candidates who do not already have a GCSE grade C (4) or above will be discouraged from applying, but not blocked."
           },
           checked: (data[mathsRadioName] === "must")
         }, {
@@ -60,7 +60,7 @@
           value: "must",
           text: "Must have the GCSE, or equivalent (least flexible)",
           hint: {
-            text: "Candidates who do not already have a GCSE grace C (4) or above, or above will be discouraged from applying, but not blocked."
+            text: "Candidates who do not already have a GCSE grade C (4) or above will be discouraged from applying, but not blocked."
           },
           checked: (data[englishRadioName] === "must")
         }, {
@@ -94,7 +94,7 @@
             value: "must",
             text: "Must have the GCSE, or equivalent (least flexible)",
             hint: {
-              text: "Candidates who do not already have a GCSE grace C (4) or above, or above will be discouraged from applying, but not blocked."
+              text: "Candidates who do not already have a GCSE grade C (4) or above will be discouraged from applying, but not blocked."
             },
             checked: (data[scienceRadioName] === "must")
           }, {
