--- a/app/views/course/degree-subject.html
+++ b/app/views/course/degree-subject.html
@@ -31,7 +31,7 @@
         name: radioName,
         fieldset: {
           legend: {
-            text: "Do you have more specific degree subject requirements?",
+            text: "Do you have any additional degree subject requirements?",
             classes: "govuk-fieldset__legend--m"
           }
         },
