Add hint text for visa questions

--- a/app/views/about-your-organisation/visa-sponsorship.html
+++ b/app/views/about-your-organisation/visa-sponsorship.html
@@ -18,6 +18,9 @@
             classes: "govuk-fieldset__legend--m"
           }
         },
+        hint: {
+          text: "Applies to fee-paying courses"
+        },
         items: [{
           value: "true",
           text: "Yes",
@@ -36,6 +39,9 @@
             text: "Can you sponsor Skilled worker visas?",
             classes: "govuk-fieldset__legend--m"
           }
+        },
+        hint: {
+          text: "Applies to salaried courses"
         },
         items: [{
           value: "true",
