--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -192,62 +192,37 @@
           {% endif %}
         {% endif %}
 
+        {% set pendingGcses = data[code + '-pending-gcses'] %}
+        {% set equivalencyTestsOffered = data[code + "-equivalency-tests-offered"] %}
 
-        {% if data[code + "-gcse-additional-requirements"] === "Yes" %}
-          <p class="govuk-body">{{ data[code + "-gcse-requirements"] }}</p>
-        {% endif %}
-
-        {% set englishGcseFlexibility = data[code + "-gcse-english-flexibility"] %}
-        {% set mathsGcseFlexibility = data[code + "-gcse-maths-flexibility"] %}
-        {% set scienceGcseFlexibility = data[code + "-gcse-science-flexibility"] %}
-
-        {% set subjectsMustHave = [] %}
-        {% set subjectsCanBePending = [] %}
-        {% set subjectsPendingOrEquivalencyTests = [] %}
-
-        {% if englishGcseFlexibility %}
+        {% if pendingGcses %}
           <p class="govuk-body">GCSE grade 4 (C) or above in English{{", maths and science" if   course.name == "Primary" else " and maths" }}, or equivalent.</p>
+
+          {% if data[code + "-gcse-additional-requirements"] === "Yes" %}
+            <p class="govuk-body">{{ data[code + "-gcse-requirements"] }}</p>
+          {% endif %}
+
+            <p class="govuk-body">
+              {% if pendingGcses == "true" %}
+                Candidates with pending GCSEs will be considered.
+              {% else %}
+                Candidates with pending GCSEs will not be considered.
+              {% endif %}
+            </p>
+
+            <p class="govuk-body">
+              {% if equivalencyTestsOffered == "true" %}
+                Equivalency tests will be offered in {{ data[code + "-equivalency-subjects"] | formatList }}.
+              {% else %}
+                Equivalency tests will not be offered.
+              {% endif %}
+            </p>
+
         {% else %}
           {# Show missing message #}
             <p class="missing-section">
               Please add details <a href="{{ course.path }}/gcses-pending-or-equivalency-tests">about GCSE requirements</a>.
             </p>
-        {% endif %}
-
-        {% if englishGcseFlexibility === "pending" %}
-          {% set subjectsCanBePending = subjectsCanBePending | push("English") %}
-        {% elif englishGcseFlexibility === "must" %}
-          {% set subjectsMustHave = subjectsMustHave | push("English") %}
-        {% elif englishGcseFlexibility === "equivalency-test-offered" %}
-          {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("English") %}
-        {% endif %}
-
-        {% if mathsGcseFlexibility === "pending" %}
-          {% set subjectsCanBePending = subjectsCanBePending | push("maths") %}
-        {% elif mathsGcseFlexibility === "must" %}
-          {% set subjectsMustHave = subjectsMustHave | push("maths") %}
-        {% elif mathsGcseFlexibility === "equivalency-test-offered" %}
-          {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("maths") %}
-        {% endif %}
-
-        {% if scienceGcseFlexibility === "pending" %}
-          {% set subjectsCanBePending = subjectsCanBePending | push("science") %}
-        {% elif scienceGcseFlexibility === "must" %}
-          {% set subjectsMustHave = subjectsMustHave | push("science") %}
-        {% elif scienceGcseFlexibility === "equivalency-test-offered" %}
-          {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("science") %}
-        {% endif %}
-
-        {% if subjectsMustHave | length > 0 %}
-          <p class="govuk-body">Equivalency tests will not be offered for {{ subjectsMustHave | formatOrList }}.</p>
-        {% endif %}
-
-        {% if subjectsCanBePending | length > 0 %}
-          <p class="govuk-body">Candidates who are currently taking their {{"a" if (subjectsCanBePending | length) === 1 }} {{ subjectsCanBePending | formatOrList }} GCSE{{"s" if (subjectsCanBePending | length) > 1 }} will be considered, but equivalency tests will not be offered.</p>
-        {% endif %}
-
-        {% if subjectsPendingOrEquivalencyTests | length > 0 %}
-          <p class="govuk-body">You can ask to take an equivalency test for {{ subjectsPendingOrEquivalencyTests | formatOrList }}. You will also be considered if you are currently taking {{"a" if (subjectsCanBePending | length) === 1 }} {{ subjectsCanBePending | formatOrList }} GCSE{{"s" if (subjectsPendingOrEquivalencyTests | length) > 1 }}.</p>
         {% endif %}
 
         {% if data[code + "-personal-qualities"] %}
