Move school placements free text to organisation level

--- a/app/views/about-your-organisation/about.html
+++ b/app/views/about-your-organisation/about.html
@@ -1,18 +1,16 @@
 {% extends "layout.html" %}
-{% set title = "About your organisation" %}
+{% set title = "Training with your organisation" %}
 {% set backLink = "/about-your-organisation" %}
 
 {% block content %}
-  <form action="/about-your-organisation" method="post">
+  <form action="{{ backLink }}" method="post">
+    <h1 class="govuk-heading-xl">
+      <span class="govuk-caption-xl">{{ data["training-provider-name"] }}</span>
+      {{ title }}
+    </h1>
+
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        {% include "about-your-organisation/_errors.html" %}
-
-        <h1 class="govuk-heading-xl">
-          <span class="govuk-caption-xl">{{ data["training-provider-name"] }}</span>
-          {{ title }}
-        </h1>
-
         <p class="govuk-body">Tell applicants why they should choose to train with you. Say:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>who you are</li>
@@ -32,7 +30,7 @@
 
         {{ govukCharacterCount({
           label: {
-            text: "Training with you",
+            text: "Training with your organisation",
             classes: "govuk-label--s"
           },
           name: "about-organisation",
@@ -63,28 +61,12 @@
           {% endfor %}
         {% endif %}
 
-        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--xl">
-
-        <h2 id="training-with-a-disability" class="govuk-heading-l">Training with disabilities and other needs</h2>
-        <p>Say how you support candidates with disabilities and other needs. This could include candidates with:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>dyslexia</li>
-          <li>physical, hearing and visual impairments</li>
-          <li>mental health conditions</li>
-        </ul>
-        <p>If accessibility varies between locations, give details. It’s also useful to candidates to know how you’ve accommodated others with specific access needs in the past.</p>
-
-        {{ govukCharacterCount({
-          label: {
-            text: "Training with disabilities and other needs",
-            classes: "govuk-label--s"
-          },
-          name: "training-with-a-disability",
-          id: "training-with-a-disability",
-          value: data["training-with-a-disability"],
-          maxwords: 250,
-          rows: 14
-        }) }}
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save"
+          }) }}
+          <a class="govuk-link" href="/about-your-organisation">Cancel changes</a>
+        </div>
       </div>
 
       <div class="govuk-grid-column-one-third">
@@ -92,13 +74,6 @@
           {{ macros.formatting() }}
         </div>
       </div>
-    </div>
-
-    <div class="govuk-button-group">
-      {{ govukButton({
-        text: "Save"
-      }) }}
-      <a class="govuk-link" href="/about-your-organisation">Cancel changes</a>
     </div>
   </form>
 {% endblock %}
